--- a/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
@@ -86,7 +86,7 @@ stages:
             onnxruntimecpubuild \
             /bin/bash -c "
               set -ex; \
-              dotnet help; \"
+              dotnet help "
         displayName: 'Run dotnet tests'
 
       - template: templates/linux-build-step-with-cache.yml
