--- a/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
@@ -68,9 +68,9 @@ stages:
       - template: templates/get-docker-image-steps.yml
         parameters:
           Dockerfile: tools/ci_build/github/linux/docker/Dockerfile.manylinux2_28_cpu
-          Context: tools/ci_build/github/linux/docker/inference/x64/python/cpu
+          Context: tools/ci_build/github/linux/docker/
           DockerBuildArgs: "--build-arg BUILD_UID=$( id -u ) --build-arg BASEIMAGE=amd64/almalinux:8 --build-arg PLATFORM=x86_64 --build-arg PREPEND_PATH=/opt/rh/gcc-toolset-12/root/usr/bin: --build-arg LD_LIBRARY_PATH_ARG=/opt/rh/gcc-toolset-12/root/usr/lib64:/opt/rh/gcc-toolset-12/root/usr/lib:/opt/rh/gcc-toolset-12/root/usr/lib64/dyninst:/opt/rh/gcc-toolset-12/root/usr/lib/dyninst:/usr/local/lib64 --build-arg DEVTOOLSET_ROOTPATH=/opt/rh/gcc-toolset-12/root"
-          Repository: onnxruntimecpubuildpythonx86_64
+          Repository: onnxruntimecpubuild
 
       - bash: |
           mkdir -p $HOME/.onnx
@@ -83,7 +83,7 @@ stages:
             -e ALLOW_RELEASED_ONNX_OPSET_ONLY=0 \
             -e NIGHTLY_BUILD \
             -e BUILD_BUILDNUMBER \
-            onnxruntimecpubuildpythonx86_64 \
+            onnxruntimecpubuild \
             /bin/bash -c "
               set -ex; \
               dotnet help "
@@ -113,7 +113,7 @@ stages:
                     -e NIGHTLY_BUILD \
                     -e BUILD_BUILDNUMBER \
                     -e CCACHE_DIR=/cache \
-                    onnxruntimecpubuildpythonx86_64 \
+                    onnxruntimecpubuild \
                     /bin/bash -c "
                       set -ex; \
                       ccache -s; \
