mount /data/models

--- a/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
@@ -120,9 +120,9 @@ stages:
           mkdir -p $HOME/.onnx
           docker run --rm \
             --volume /data/onnx:/data/onnx:ro \
-            --volume /data/models:/data/models:ro \
             --volume $(Build.SourcesDirectory):/onnxruntime_src \
             --volume $(Build.BinariesDirectory):/build \
+            --volume /data/models:/build/models \
             --volume $HOME/.onnx:/home/onnxruntimedev/.onnx \
             -e ALLOW_RELEASED_ONNX_OPSET_ONLY=0 \
             -e NIGHTLY_BUILD \
