--- a/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
@@ -137,7 +137,7 @@ stages:
               "
         displayName: 'Dotnet build C# sln and Test'
 
-      - scripts: |
+      - script: |
           ln -s /data/models $(Build.BinariesDirectory)/models
         displayName: link model dir
 
