--- a/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
@@ -100,7 +100,7 @@ stages:
                       set -ex; \
                       ccache -s; \
                       /opt/python/cp38-cp38/bin/python3 /onnxruntime_src/tools/ci_build/build.py \
-                        --build_dir /build --cmake_generator 'Unix Makefiles' \
+                        --build_dir /build --cmake_generator 'Ninja' \
                         --config Debug Release \
                         --skip_submodule_sync \
                         --build_shared_lib \
@@ -115,13 +115,16 @@ stages:
                       ccache -z"
                 workingDirectory: $(Build.SourcesDirectory)
 
+      - script: |
+          ln -s /data/models $(Build.BinariesDirectory)/models
+        displayName: link model dir
+
       - bash: |
           mkdir -p $HOME/.onnx
           docker run --rm \
             --volume /data/onnx:/data/onnx:ro \
             --volume $(Build.SourcesDirectory):/onnxruntime_src \
             --volume $(Build.BinariesDirectory):/build \
-            --volume /data/models:/build/models:ro \
             --volume $HOME/.onnx:/home/onnxruntimedev/.onnx \
             -e ALLOW_RELEASED_ONNX_OPSET_ONLY=0 \
             -e NIGHTLY_BUILD \
@@ -136,10 +139,6 @@ stages:
               popd
               "
         displayName: 'Dotnet build C# sln and Test'
-
-      - script: |
-          ln -s /data/models $(Build.BinariesDirectory)
-        displayName: link model dir
 
       - task: CmdLine@2
         displayName: 'Install python deps'
