--- a/.github/workflows/publish-gh-pages.yml
+++ b/.github/workflows/publish-gh-pages.yml
@@ -38,9 +38,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 19.x
-          
+
       - name: read files
-        run: ls -a 
+        run: ls website -a 
 
       - name: Install dependencies
         run: npm install
