fix bug: Exit with Error

--- a/tools/ci_build/github/azure-pipelines/linux-gpu-tensorrt-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-gpu-tensorrt-ci-pipeline.yml
@@ -85,6 +85,7 @@ jobs:
                   -e CCACHE_DIR=/cache \
                   onnxruntimetensorrt86gpubuild \
                   /bin/bash -c "
+                    set -ex; \
                     cccache -s; \
                       /opt/python/cp38-cp38/bin/python3 /onnxruntime_src/tools/ci_build/build.py \
                       --build_dir /build --cmake_generator Ninja \
