--- a/tools/ci_build/github/azure-pipelines/linux-gpu-tensorrt-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-gpu-tensorrt-ci-pipeline.yml
@@ -86,7 +86,7 @@ jobs:
                   onnxruntimetensorrt86gpubuild \
                   /bin/bash -c "
                     set -ex; \
-                    cccache -s; \
+                    ccache -s; \
                       /opt/python/cp38-cp38/bin/python3 /onnxruntime_src/tools/ci_build/build.py \
                       --build_dir /build --cmake_generator Ninja \
                       --config Release \
