--- a/tools/ci_build/github/azure-pipelines/nuget/templates/test_linux.yml
+++ b/tools/ci_build/github/azure-pipelines/nuget/templates/test_linux.yml
@@ -62,6 +62,7 @@ stages:
         docker run --rm \
           --volume $(Build.SourcesDirectory):/onnxruntime_src \
           --volume $(Build.BinariesDirectory):/build \
+          -e BUILD_SOURCESDIRECTORY='/onnxruntime_src' \
           -e OnnxRuntimeBuildDirectory='/build' \
           -e DisableContribOps='$(DisableContribOps)' \
           -e DisableMlOps='$(DisableMlOps)' \
@@ -71,7 +72,7 @@ stages:
           /bin/bash -c "
             set -ex; \
             pushd /build; \
-            . /onnxruntime_src/csharp/test/Microsoft.ML.OnnxRuntime.EndToEndTests/runtest.sh /build/nuget-artiface $(NuGetPackageVersionNumber); \
+            bash /onnxruntime_src/csharp/test/Microsoft.ML.OnnxRuntime.EndToEndTests/runtest.sh /build/nuget-artiface $(NuGetPackageVersionNumber); \
             popd
             "
       displayName: 'Run Package Test'
