--- a/tools/ci_build/github/azure-pipelines/linux-qnn-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-qnn-ci-pipeline.yml
@@ -103,6 +103,7 @@ jobs:
             ./build/Release/onnx_test_runner -e qnn \
               -v -j 1 -c 1 -i "backend_path|$(QNN_SDK_ROOT)/lib/x86_64-linux-clang/libQnnHtp.so" \
               /data/qdq_models
+        enabled: false
 
       - task: CmdLine@2
         displayName: Run QDQ model tests with context cache enabled
