--- a/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
@@ -137,8 +137,8 @@ stages:
               export build_dir=/build; \
               echo Install Python Deps ; \
 
-              alias python3=/opt/python/cp39-cp39/bin/python3.9 ; \
-              python3 -m pip uninstall -y ort-nightly-gpu ort-nightly onnxruntime onnxruntime-gpu onnxruntime-training onnxruntime-directml ort-nightly-directml onnx -qq; \
+              alias python3=/opt/python/cp38-cp38/bin/python3 ; \
+              /opt/python/cp38-cp38/bin/python3 -m pip uninstall -y ort-nightly-gpu ort-nightly onnxruntime onnxruntime-gpu onnxruntime-training onnxruntime-directml ort-nightly-directml onnx -qq; \
               cp $src_dir/tools/ci_build/github/linux/docker/scripts/manylinux/requirements.txt $src_dir/requirements.txt; \
               echo Test ORT with the latest ONNX release. ; \
               sed -i \"s/git+http:\/\/github\.com\/onnx\/onnx.*/onnx/\" $build_dir/requirements.txt ; \
