--- a/tools/ci_build/github/azure-pipelines/linux-gpu-tensorrt-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-gpu-tensorrt-ci-pipeline.yml
@@ -96,7 +96,7 @@ jobs:
                       --build_wheel \
                       --enable_onnx_tests --use_cuda --cuda_version=11.8 --cuda_home=/usr/local/cuda-11.8 --cudnn_home=/usr/local/cuda-11.8 \
                       --enable_pybind --build_java \
-                      --use_tensorrt --tensorrt_home /usr \
+                      --use_tensorrt --use_tensorrt_oss_parser --tensorrt_home /usr \
                       --cmake_extra_defines CMAKE_CUDA_ARCHITECTURES=75 \
                       --use_cache; \
                      ccache -sv; \
