add shl_ep: conv2d gemm

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -125,6 +125,7 @@ option(onnxruntime_ENABLE_INSTRUMENT "Enable Instrument with Event Tracing for W
 option(onnxruntime_USE_TELEMETRY "Build with Telemetry" OFF)
 cmake_dependent_option(onnxruntime_USE_MIMALLOC "Override new/delete and arena allocator with mimalloc" OFF "WIN32;NOT onnxruntime_USE_CUDA;NOT onnxruntime_USE_OPENVINO" OFF)
 option(onnxruntime_USE_CANN "Build with CANN support" OFF)
+option(onnxruntime_USE_SHL "Build with SHL support" OFF)
 option(onnxruntime_USE_ROCM "Build with AMD GPU support" OFF)
 option(onnxruntime_USE_TVM "Build with TVM support" OFF)
 option(onnxruntime_TVM_CUDA_RUNTIME "Build TVM with CUDA support" OFF)
@@ -498,6 +499,10 @@ if (NOT MSVC AND NOT (CMAKE_SYSTEM_NAME STREQUAL "iOS"))
       return std::atomic<int64_t>{};
     }
   " onnxruntime_HAVE_BUILTIN_ATOMICS)
+  if (onnxruntime_USE_SHL)
+    message("add atomic link for rvv gcc.")
+    set(onnxruntime_LINK_LIBATOMIC true)
+  endif()
   if (NOT onnxruntime_HAVE_BUILTIN_ATOMICS)
     set(onnxruntime_LINK_LIBATOMIC true)
   endif()
@@ -798,6 +803,25 @@ if (onnxruntime_USE_CANN)
     list(APPEND ORT_PROVIDER_FLAGS  -DUSE_CANN=1)
     list(APPEND ORT_PROVIDER_CMAKE_FLAGS -Donnxruntime_USE_CANN=1)
     list(APPEND ONNXRUNTIME_PROVIDER_NAMES cann)
+endif()
+if (onnxruntime_USE_SHL)
+  if (onnxruntime_SHL_TARGET)
+    set(ALLOWED_TARGETS C920 C906)
+    list(FIND ALLOWED_TARGETS ${onnxruntime_SHL_TARGET} INDEX)
+    if(${INDEX} EQUAL 0)
+      list(APPEND ORT_PROVIDER_FLAGS  -DRISCV_C920)
+    elseif(${INDEX} EQUAL 1)
+      list(APPEND ORT_PROVIDER_FLAGS  -DRISCV_C906)
+    elseif(${INDEX} EQUAL -1)
+      message(FATAL_ERROR "Invalid value '${onnxruntime_SHL_TARGET}' for onnxruntime_SHL_TARGET. Allowed values are ${ALLOWED_TARGETS}")
+    endif()
+  else()
+    list(APPEND ORT_PROVIDER_FLAGS  -DSHL_REF_X86)
+  endif()
+
+  list(APPEND ORT_PROVIDER_FLAGS  -DUSE_SHL=1)
+  list(APPEND ORT_PROVIDER_CMAKE_FLAGS -Donnxruntime_USE_SHL=1)
+  list(APPEND ONNXRUNTIME_PROVIDER_NAMES shl)
 endif()
 if (onnxruntime_USE_AZURE)
     list(APPEND ORT_PROVIDER_FLAGS  -DUSE_AZURE=1)
