Add noexecstack and nodelete link options to all dynamically loadable libs

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -1033,6 +1033,9 @@ function(onnxruntime_add_shared_library_module target_name)
   if (MSVC AND onnxruntime_target_platform STREQUAL "x86")
     target_link_options(${target_name} PRIVATE /SAFESEH)
   endif()
+  if (UNIX AND NOT APPLE)
+    target_link_options(${target_name} PRIVATE -z noexecstack -z nodelete)
+  endif()
 endfunction()
 
 function(onnxruntime_add_object_library target_name)
