--- a/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
@@ -154,8 +154,9 @@ stages:
             -e BUILD_BUILDNUMBER \
             onnxruntimecpubuild \
               /bin/bash -c "
+                set -ex; && \
                 /bin/bash /onnxruntime_src/tools/scripts/python_test.sh /onnxruntime_src /build Release && \
-                /bin/bash /onnxruntime_src/tools/scripts/symbolic_shape_infer_test.sh /build "
+                /bin/bash /onnxruntime_src/tools/scripts/symbolic_shape_infer_test.sh /build
               "
         displayName: 'Run Release tests and symbolic shape infer test'
 
